applications/pt-interview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pt-interview
  labels:
    name: pt-interview
